# lab14

./: .travis.yml  CMakeLists.txt  README.md
sources/: process.cpp
